--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 .container-fluid {
   background-color: yellow;
   padding: 20px;
@@ -44,4 +45,16 @@
   padding: 20px;
   height: 150px;
   border: 2px solid black;
+}
+
+@media screen and (min-width : 375px) {
+  .promo {
+    background: gold;
+  }
+}
+
+@media screen and (min-width : 768px) {
+  .promo {
+    background: green;
+  }
 }
